Update External Core docs
Update documentation to reflect GHC HEAD.

--- a/docs/ext-core/Makefile
+++ b/docs/ext-core/Makefile
@@ -1,18 +1,16 @@
 #	General makefile for Latex stuff
 
+LATEX=latex \\nonstopmode \\input
+BIBTEX=bibtex
+
 dvi: core.dvi
 ps: core.ps
 
-core.dvi:	core.tex prims.tex
-		latex core.tex
-		latex core.tex
-
-../../compiler/prelude/primops.txt: ../../compiler/prelude/primops.txt.pp
-		(cd ../../compiler/prelude; gcc -E -I../../includes -traditional -x c primops.txt.pp | /bin/sed -e '/^#/d' > primops.txt)
-
-prims.tex:	../../compiler/prelude/primops.txt
-		../../utils/genprimopcode/genprimopcode --make-latex-doc < ../../compiler/prelude/primops.txt > prims.tex
-
+core.dvi:	core.tex
+		-$(LATEX) core.tex
+	        $(BIBTEX) core
+		-$(LATEX) core.tex
+		-$(LATEX) core.tex
 
 ######## General rules
 .SUFFIXES:
