Fix External Core interpreter
The External Core interpreter works (in a limited sense).
For details, see the README.

This means we now have a marginally functioning set of
External Core tools.

The other exciting change is that the test driver (Driver.hs)
now computes module dependencies automatically instead of
having a wired-in list of library modules.

--- a/utils/ext-core/Makefile
+++ b/utils/ext-core/Makefile
@@ -1,5 +1,8 @@
-all:	Check.hs Core.hs Driver.hs Env.hs Interp.hs ParsecParser.hs ParseGlue.hs Prep.hs PrimCoercions.hs Prims.hs Printer.hs
+all:	extcorelibs Check.hs Core.hs Driver.hs Env.hs Interp.hs ParsecParser.hs ParseGlue.hs Prep.hs PrimCoercions.hs Prims.hs Printer.hs
 	ghc -O2 --make -fglasgow-exts -o Driver Driver.hs
+
+extcorelibs:
+	$(MAKE) -C lib/GHC_ExtCore
 
 # Run this when the primops.txt file changes
 prims:  ../../compiler/prelude/primops.txt
