--- a/libraries/Makefile
+++ b/libraries/Makefile
@@ -246,17 +246,23 @@ FLAGGED_CONFIGURE_ARGS = $(subst $(space)',\
                                  $(space)--configure-option=',\
                                  $(space)$(CONFIGURE_ARGS))
 
+ifeq "$(Windows)" "YES"
+NONEXISTANT=c:/NONEXISTANT
+else
+NONEXISTANT=/NONEXISTANT
+endif
+
 ALL_CONFIGURE_FLAGS = \
 	           $(CONFIGURE_OPTS) \
-	           --prefix=/NONEXISTANT \
-	           --bindir=/NONEXISTANT \
-	           --libdir=/NONEXISTANT \
+	           --prefix=$(NONEXISTANT) \
+	           --bindir=$(NONEXISTANT) \
+	           --libdir=$(NONEXISTANT) \
 	           --libsubdir='$$pkgid' \
-	           --libexecdir=/NONEXISTANT \
-	           --datadir=/NONEXISTANT \
-	           --docdir=/NONEXISTANT \
-			   --haddockdir=/NONEXISTANT \
-	           --htmldir=/NONEXISTANT \
+	           --libexecdir=$(NONEXISTANT) \
+	           --datadir=$(NONEXISTANT) \
+	           --docdir=$(NONEXISTANT) \
+			   --haddockdir=$(NONEXISTANT) \
+	           --htmldir=$(NONEXISTANT) \
 	           --with-compiler=../../compiler/stage1/ghc-inplace \
 	           --with-hc-pkg=../../utils/ghc-pkg/ghc-pkg-inplace \
 	           --with-hsc2hs=../../utils/hsc2hs/hsc2hs-inplace \
