Libraries Makefile Hack for ndp We use the "build" rather than "make" target

--- a/libraries/Makefile
+++ b/libraries/Makefile
@@ -291,7 +291,9 @@ stamp/configure.library.build$(CONFIGURE_STAMP_EXTRAS).%: %/setup/Setup
 # needs to be done.  However, we're careful not to overwrite GNUmakefile
 # if it hasn't changed, so that dependency-generation isn't forced
 # every time.
-$(foreach SUBDIR,$(SUBDIRS),make.library.$(SUBDIR)):\
+# I doubt that the makefile way will work with ndp, so filter it out and use
+# a rule below to call build.library.ndp instead
+$(foreach SUBDIR,$(filter-out ndp,$(SUBDIRS)),make.library.$(SUBDIR)):\
 make.library.%: stamp/configure.library.build$(CONFIGURE_STAMP_EXTRAS).% \
                 %/setup/Setup ifBuildable/ifBuildable installPackage/installPackage
 	if ifBuildable/ifBuildable $*; then \
@@ -303,6 +305,9 @@ make.library.%: stamp/configure.library.build$(CONFIGURE_STAMP_EXTRAS).% \
 	  $(MAKE) $(MFLAGS) && \
 	  ../installPackage/installPackage register --inplace; \
 	fi
+
+# Hack for ndp, as described above
+make.library.ndp: build.library.ndp
 
 # Build the library using 'setup build' (not the default)
 $(foreach SUBDIR,$(SUBDIRS),build.library.$(SUBDIR)):\
