--- a/mk/build.mk.sample
+++ b/mk/build.mk.sample
@@ -29,10 +29,14 @@ MyWarningOpts   = -W -fno-warn-unused-matches -fwarn-unused-imports
 
 ifeq "$(BuildFlavour)" "perf"
 
-SRC_HC_OPTS   = -H32m -O2
-GhcHcOpts     = -Rghc-timing
-GhcLibHcOpts  =
-GhcLibWays    = p
+# perf matches the default settings, repeated here for comparison:
+
+SRC_HC_OPTS     = -O -H64m
+GhcStage1HcOpts = -O -fasm
+GhcStage2HcOpts = -O2 -fasm
+GhcHcOpts       = -Rghc-timing
+GhcLibHcOpts    = -O2 -fgenerics
+GhcLibWays      = p
 
 endif
 
