Ensure runhaskell is rebuild in stage2

--- a/utils/runghc/Makefile
+++ b/utils/runghc/Makefile
@@ -30,7 +30,7 @@ all :: $(RUNHASKELL_PROG)
 $(RUNHASKELL_PROG) : $(HS_PROG)
 	$(CP) $< $(RUNHASKELL_PROG)
 
-CLEAN_FILES += $(RUNHASKELL_PROG)
+MOSTLY_CLEAN_FILES += $(RUNHASKELL_PROG)
 
 ifneq "$(NO_INSTALL_RUNHASKELL)" "YES"
 INSTALL_PROGS += $(RUNHASKELL_PROG)
