--- a/libraries/integer-simple/integer.cabal
+++ b/libraries/integer-simple/integer.cabal
@@ -12,7 +12,7 @@ build-type: Simple
 Library {
     build-depends: ghc-prim
     exposed-modules: GHC.Integer
-    extensions: CPP, MagicHash, UnboxedTuples,
+    extensions: CPP, MagicHash, BangPatterns, UnboxedTuples,
                 ForeignFunctionInterface, UnliftedFFITypes
     -- We need to set the package name to integer (without a version number)
     -- as it's magic.
