--- a/mk/build.mk.sample
+++ b/mk/build.mk.sample
@@ -44,10 +44,10 @@ endif
 
 ifeq "$(BuildFlavour)" "quickest"
 
-SRC_HC_OPTS     = -H64m -Onot -fasm
+SRC_HC_OPTS     = -H64m -O0 -fasm
 GhcStage1HcOpts = -O -fasm
-GhcStage2HcOpts = -Onot -fasm
-GhcLibHcOpts    = -Onot -fasm
+GhcStage2HcOpts = -O0 -fasm
+GhcLibHcOpts    = -O0 -fasm
 GhcLibWays      =
 SplitObjs       = NO
 
@@ -57,9 +57,9 @@ endif
 
 ifeq "$(BuildFlavour)" "quick"
 
-SRC_HC_OPTS     = -H64m -Onot -fasm
+SRC_HC_OPTS     = -H64m -O0 -fasm
 GhcStage1HcOpts = -O -fasm
-GhcStage2HcOpts = -Onot -fasm
+GhcStage2HcOpts = -O0 -fasm
 GhcLibHcOpts    = -O -fasm
 GhcLibWays      =
 SplitObjs       = NO
