--- a/configure.ac
+++ b/configure.ac
@@ -665,8 +665,10 @@ if test "$WithGhc" != ""; then
   GhcCanonVersion="$GhcMajVersion$GhcMinVersion2"
   if test $GhcCanonVersion -ge 605; then ghc_ge_605=YES; else ghc_ge_605=NO; fi
   if test $GhcCanonVersion -ge 607; then ghc_ge_607=YES; else ghc_ge_607=NO; fi
+  if test $GhcCanonVersion -ge 609; then ghc_ge_609=YES; else ghc_ge_609=NO; fi
   AC_SUBST(ghc_ge_605)dnl
   AC_SUBST(ghc_ge_607)dnl
+  AC_SUBST(ghc_ge_609)dnl
 fi
 
 # Check whether this GHC has editline installed
