--- a/mk/config.mk.in
+++ b/mk/config.mk.in
@@ -905,6 +905,7 @@ GhcMinVersion	= @GhcMinVersion@
 
 ghc_ge_605 = YES
 ghc_ge_607 = YES
+ghc_ge_609 = YES
 
 else # not UseStage1 or BootingFromHc
 
@@ -918,6 +919,7 @@ GhcMinVersion	= @GhcMinVersion@
 # Some useful GHC version predicates:
 ghc_ge_605 = @ghc_ge_605@
 ghc_ge_607 = @ghc_ge_607@
+ghc_ge_609 = @ghc_ge_609@
 endif
 
 # Canonicalised ghc version number, used for easy (integer) version
