--- a/libraries/Makefile.local
+++ b/libraries/Makefile.local
@@ -15,6 +15,8 @@ GHC := $(SAVE_GHC)
 AR  := $(SAVE_AR)
 LD  := $(SAVE_LD)
 
+GhcLibHcOpts += -fno-warn-deprecated-flags
+
 # Now add flags from the GHC build system to the Cabal build:
 GHC_CC_OPTS += $(addprefix -optc, $(MACOSX_DEPLOYMENT_CC_OPTS))
 GHC_OPTS    += $(SRC_HC_OPTS)
