--- a/mk/build.mk.sample
+++ b/mk/build.mk.sample
@@ -35,7 +35,7 @@ SRC_HC_OPTS     = -O -H64m
 GhcStage1HcOpts = -O -fasm
 GhcStage2HcOpts = -O2 -fasm
 GhcHcOpts       = -Rghc-timing
-GhcLibHcOpts    = -O2 -fgenerics
+GhcLibHcOpts    = -O2 -XGenerics
 GhcLibWays      = p
 
 endif
