--- a/libraries/template-haskell/template-haskell.cabal
+++ b/libraries/template-haskell/template-haskell.cabal
@@ -14,6 +14,8 @@ exposed-modules:
     Language.Haskell.TH.Lib,
     Language.Haskell.TH.Quote,
     Language.Haskell.TH
+extensions: MagicHash, PatternGuards, PolymorphicComponents,
+            DeriveDataTypeable, TypeSynonymInstances
 -- We need to set the package name to template-haskell (without a
 -- version number) as it's magic.
 ghc-options: -package-name template-haskell
